src/test/dev-workspace/src/main/java/net/labymod/core/laby3d/opengl/error/generated/EXTMemoryObjectWin32_StringErrorContext.java
package net.labymod.core.laby3d.opengl.error.generated;

import java.util.HashMap;
import java.util.Map;

/* JADX INFO: loaded from: LabyMod-4.jar:net/labymod/core/laby3d/opengl/error/generated/EXTMemoryObjectWin32_StringErrorContext.class */
public final class EXTMemoryObjectWin32_StringErrorContext {
    public static Map<String, String> buildMethods() {
        Map<String, String> methods = new HashMap<>();
        methods.put("nglImportMemoryWin32HandleEXT(IJIJ)V", "net/labymod/core/laby3d/opengl/error/generated/EXTMemoryObjectWin32ErrorContext");
        methods.put("glImportMemoryWin32HandleEXT(IJIJ)V", "net/labymod/core/laby3d/opengl/error/generated/EXTMemoryObjectWin32ErrorContext");
        methods.put("nglImportMemoryWin32NameEXT(IJIJ)V", "net/labymod/core/laby3d/opengl/error/generated/EXTMemoryObjectWin32ErrorContext");
        methods.put("glImportMemoryWin32NameEXT(IJIJ)V", "net/labymod/core/laby3d/opengl/error/generated/EXTMemoryObjectWin32ErrorContext");
        return methods;
    }
}
